--- a/app/src/main/res/layout/item_marvel_character.xml
+++ b/app/src/main/res/layout/item_marvel_character.xml
@@ -1,47 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<FrameLayout
     android:layout_margin="4dp"
     android:background="@drawable/bg_rounded_white"
     android:elevation="2dp"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/iv_thumbnail"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:contentDescription="@null"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+    <include
+        android:id="@+id/row"
+        layout="@layout/row_marvel_character" />
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
-        app:layout_constraintTop_toTopOf="@+id/iv_thumbnail"
-        tools:text="Name here" />
+    <include
+        android:id="@+id/shimmer"
+        layout="@layout/shimmer_marvel_character"
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tv_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name"
-        tools:text="Description here" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
