feat: dark mode configured

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="shimmer_color">#B3B3B3</color>
+    <color name="shimmer">#B3B3B3</color>
+    <color name="surface_dark">#FAFAFA</color>
 </resources>
