--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".presentation.ui.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:background="?attr/colorPrimary"
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
