--- a/app/src/main/res/layout/shimmer_marvel_character.xml
+++ b/app/src/main/res/layout/shimmer_marvel_character.xml
@@ -14,7 +14,7 @@
             android:id="@+id/iv_thumbnail"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@color/shimmer_color"
+            android:background="@color/shimmer"
             android:contentDescription="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:background="@color/shimmer_color"
+            android:background="@color/shimmer"
             app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
             app:layout_constraintTop_toTopOf="@+id/iv_thumbnail" />
 
@@ -34,7 +34,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@color/shimmer_color"
+            android:background="@color/shimmer"
             app:layout_constraintStart_toStartOf="@+id/tv_name"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
