--- a/app/src/main/res/layout/item_marvel_character.xml
+++ b/app/src/main/res/layout/item_marvel_character.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:layout_margin="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginHorizontal="4dp"
     android:background="@drawable/bg_rounded_surface"
     android:elevation="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
